<resources>
    <string name="app_name">Ripple</string>

    <string name="action_trigger">Trigger!</string>
    <string name="action_test_run">Test Run</string>
    <string name="action_settings">Settings</string>
    <string name="test_dialog_title">Ripple Test Run</string>

    <string name="responders">Ripple Responders</string>

    <string name="swipe_down_to_trigger">Swipe down to trigger</string>
    <string name="release_to_confirm">Release to confirm</string>
    <string name="panic_test_successful">Good job! In a real scenario, your trigger would have rippled out to all of the responder apps.  And those apps would then respond by locking or whatever other behaviors you have configured.</string>
    <string name="intro_instructions">When you trigger a ripple, your chosen apps react.  Tap EDIT to see and change that app\'s behaviors.</string>

    <string name="tap_anywhere_to_cancel">Tap anywhere to cancel</string>
    <string name="tap_to_trigger">Tap to trigger a ripple</string>
    <string name="only_a_test">This is only a test</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="got_it">Got it</string>
    <string name="app_hides">App hides when triggered</string>

    <string name="pref_countdown_enabled">countdown_enabled</string>
    <string name="pref_countdown_enabled_summary">Select if a countdown should be fired before trigger</string>
    <string name="countdown">Countdown</string>

    <string name="pref_login_action">login_action</string>
    <string name="login_action">Login failure action</string>
    <string name="pref_login_actions_summary">Run after login failure</string>

    <string name="pref_login_failures_number">login_failures_number</string>
    <string name="login_failures_number">Failures number</string>
    <string name="pref_login_failures_numbre_summary">Number of times the login must fail.</string>

    <string name="monitor_login_failues">Monitor login failures</string>
</resources>
